--- a/MyBlogWebSiteFullModules/blog-api/src/main/resources/application.properties
+++ b/MyBlogWebSiteFullModules/blog-api/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.redis.port=6379
 #springfox.documentation.swagger-ui.enabled=true
 
 #Amazon s3
-AmazonS3.accessKey=AKIASQKZLPBVDBBGCOHZ
-AmazonS3.accessSecretKey=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
+AmazonS3.accessKey=xxxxx
+AmazonS3.accessSecretKey=xxxxxx
 
 #rocketmq\u914D\u7F6E
-rocketmq.name-server=54.89.80.177:9876
+rocketmq.name-server=xxxxxx
 rocketmq.producer.group=blog_group
