删除敏感信息

--- a/MyBlogWebSiteFullModules/blog-api/src/main/resources/application-prod.properties
+++ b/MyBlogWebSiteFullModules/blog-api/src/main/resources/application-prod.properties
@@ -20,5 +20,5 @@ spring.redis.port=6379
 #springfox.documentation.swagger-ui.enabled=true
 
 #Amazon s3
-AmazonS3.accessKey=AKIASQKZLPBVDBBGCOHZ
-AmazonS3.accessSecretKey=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
+AmazonS3.accessKey=xxxxxx
+AmazonS3.accessSecretKey=xxxxxxxx
