--- a/MyBlogWebSiteFullModules/blog-api/src/main/resources/application.properties
+++ b/MyBlogWebSiteFullModules/blog-api/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.redis.port=6379
 #springfox.documentation.swagger-ui.enabled=true
 
 #Amazon s3
-AmazonS3.accessKey=AKIASQKZLPBVIO5QF34Q
-AmazonS3.accessSecretKey=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
+AmazonS3.accessKey=xxxxxx
+AmazonS3.accessSecretKey=xxxxxxx
 
 #rocketmq\u914D\u7F6E
-rocketmq.name-server=54.89.80.177:9876
+rocketmq.name-server=xxxxxxxx
 rocketmq.producer.group=blog_group
